output/kubernates/postgres-database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-database-svc
spec:
  selector:
    app: postgres-database
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
