output/kubernates/networkpolicy-allow-egress-app-to-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-from-app-to-db
spec:
  podSelector:
    matchLabels:
      app: application
  egress:
    - to:
        - podSelector:
            matchLabels:
              db: postgres-database
  policyTypes:
    - Egress
