output/kubernates/networkpolicy-allow-ingress-to-db-from-app.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-db-from-app
spec:
  podSelector:
    matchLabels:
      db: postgres-database
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: application
  policyTypes:
    - Ingress
